// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover component overrides: custom popover arrow has correct props 1`] = `
Object {
  "$arrowOffset": Object {
    "left": 0,
    "top": 0,
  },
  "$isAnimating": false,
  "$isOpen": true,
  "$placement": "auto",
  "$popoverOffset": Object {
    "left": 0,
    "top": 0,
  },
  "$ref": Object {
    "current": null,
  },
  "$showArrow": true,
}
`;

exports[`Popover component overrides: custom popover body has correct props 1`] = `
Object {
  "$arrowOffset": Object {
    "left": 0,
    "top": 0,
  },
  "$isAnimating": false,
  "$isOpen": true,
  "$placement": "auto",
  "$popoverOffset": Object {
    "left": 0,
    "top": 0,
  },
  "$ref": Object {
    "current": null,
  },
  "$showArrow": true,
  "data-baseweb": "popover",
  "id": "bui-mock-id",
  "onMouseEnter": [Function],
  "onMouseLeave": [Function],
}
`;

exports[`Popover component overrides: custom popover inner has correct props 1`] = `
Object {
  "$arrowOffset": Object {
    "left": 0,
    "top": 0,
  },
  "$isAnimating": false,
  "$isOpen": true,
  "$placement": "auto",
  "$popoverOffset": Object {
    "left": 0,
    "top": 0,
  },
  "$showArrow": true,
}
`;
